[gd_scene load_steps=16 format=2]

[ext_resource path="res://Grafik/Avatar/cutscene/csh1.png" type="Texture" id=1]
[ext_resource path="res://Grafik/Avatar/cutscene/csk1.png" type="Texture" id=2]
[ext_resource path="res://Grafik/Assets/Haus/roof_in1.png" type="Texture" id=3]
[ext_resource path="res://sound/introsound2.mp3" type="AudioStream" id=4]
[ext_resource path="res://Grafik/Assets/Haus/roof_in2.png" type="Texture" id=5]
[ext_resource path="res://Grafik/Avatar/cutscene/cso1.png" type="Texture" id=6]
[ext_resource path="res://Grafik/Assets/GUI/empty_frame.png" type="Texture" id=7]
[ext_resource path="res://Grafik/Avatar/cutscene/csacc1.png" type="Texture" id=9]
[ext_resource path="res://Szenen/Avatar/cutsceneAvatar.gd" type="Script" id=10]
[ext_resource path="res://Szenen/Avatar/Intro.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.1, 3.2, 5, 5.1, 7 ),
"transitions": PoolRealArray( 1, 1, 0.90125, 163.144, 1.46409, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.137255, 0.137255, 0.137255, 1 ), Color( 0.137255, 0.137255, 0.137255, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 1.5, 3.2, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "Eines Abends....", "", "Oh nein, ein Stromausfall!", "Zum Gl√ºck habe ich eine Taschenlampe. Aber um mich im Haus zurechtzufinden, brauche ich mehr Licht!" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Starten:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = SubResource( 6 )

[node name="Intro" type="Node2D"]
script = ExtResource( 11 )

[node name="roof_r1" type="Sprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 1.33946, 1.34074 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="roof_r1"]
anims/intro = SubResource( 1 )

[node name="Label" type="Label" parent="roof_r1/AnimationPlayer"]
margin_left = 136.397
margin_top = 122.576
margin_right = 460.397
margin_bottom = 294.576
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Eines Abends...."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cutsceneAvatar" type="Node2D" parent="roof_r1"]
position = Vector2( 412.247, 303.443 )
scale = Vector2( 0.749485, 0.749485 )
script = ExtResource( 10 )

[node name="csk" type="Sprite" parent="roof_r1/cutsceneAvatar"]
position = Vector2( -296.704, 111.635 )
texture = ExtResource( 2 )

[node name="csh" type="Sprite" parent="roof_r1/cutsceneAvatar"]
position = Vector2( -299.967, 108.759 )
texture = ExtResource( 1 )

[node name="csacc" type="Sprite" parent="roof_r1/cutsceneAvatar"]
position = Vector2( -300.028, 110.163 )
texture = ExtResource( 9 )

[node name="cso" type="Sprite" parent="roof_r1/cutsceneAvatar"]
position = Vector2( -296.261, 111.518 )
texture = ExtResource( 6 )

[node name="Starten" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.886275 )
position = Vector2( 1139.48, 697.798 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Starten"]
margin_left = -224.0
margin_top = -29.0
margin_right = 228.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = SubResource( 4 )
text = "starten"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="Starten"]
margin_left = -240.333
margin_top = -44.3333
margin_right = 229.667
margin_bottom = 41.6667
mouse_default_cursor_shape = 2

[node name="introsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.622

[connection signal="animation_finished" from="roof_r1/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="Starten/Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Starten/Control" to="." method="_on_Control_mouse_exited"]
